--- a/example/miniprogram/pages/index/index.wxml
+++ b/example/miniprogram/pages/index/index.wxml
@@ -1,10 +1,33 @@
 <view>
-  <navigator url="/pages/button/button">button</navigator>
-  <navigator url="/pages/loading/loading">loading</navigator>
-  <navigator url="/pages/space/space">space</navigator>
-  <navigator url="/pages/transition/transition">transition</navigator>
-  <navigator url="/pages/overlay/overlay">overlay</navigator>
-  <navigator url="/pages/col/col">grid</navigator>
-  <navigator url="/pages/icon/icon">icon</navigator>
-  <navigator url="/pages/cell/cell">cell</navigator>
+  <k-cell-group title="基础" variant="card">
+    <k-cell title="Button 按钮" url="/pages/button/button" arrow clickable />
+    <k-cell title="Grid 栅格" url="/pages/col/col" arrow clickable />
+    <k-cell title="Icon 图标" url="/pages/icon/icon" arrow clickable />
+    <k-cell title="Space 间距" url="/pages/space/space" arrow clickable border="{{ false }}" />
+  </k-cell-group>
+
+  <k-cell-group title="数据展示" variant="card">
+    <k-cell title="Cell 单元格" url="/pages/cell/cell" arrow clickable border="{{ false }}" />
+  </k-cell-group>
+
+  <k-cell-group title="反馈" variant="card">
+    <k-cell title="Loading 加载" url="/pages/loading/loading" arrow clickable />
+    <k-cell
+      title="Overlay 遮罩层"
+      url="/pages/overlay/overlay"
+      arrow
+      clickable
+      border="{{ false }}"
+    />
+  </k-cell-group>
+
+  <k-cell-group title="动画" variant="card">
+    <k-cell
+      title="Transition 过渡动画"
+      url="/pages/transition/transition"
+      arrow
+      clickable
+      border="{{ false }}"
+    />
+  </k-cell-group>
 </view>
