--- a/src/overlay/demo/overlay.wxml
+++ b/src/overlay/demo/overlay.wxml
@@ -1,17 +1,7 @@
 <k-space style="padding-bottom: 16px" size="md" vertical>
   <demo-block title="基础用法">
-    <k-button color="primary" size="sm" variant="clear" bind:click="onClick">Open</k-button>
+    <k-button color="primary" size="sm" variant="clear" bind:click="onClickOpen">Open</k-button>
 
-    <k-overlay visible="{{ visible }}" bind:click="onClick" />
-  </demo-block>
-
-  <demo-block title="嵌入内容">
-    <k-button color="primary" size="sm" variant="clear" bind:click="onClickEmbedded">Open</k-button>
-
-    <k-overlay visible="{{ visibleEmbedded }}" bind:click="onClickEmbedded">
-      <view class="content">
-        <view class="block" catch:tap="noop"></view>
-      </view>
-    </k-overlay>
+    <k-overlay visible="{{ visible }}" bind:click="onClickClose" />
   </demo-block>
 </k-space>
