--- a/src/transition/demo/transition.less
+++ b/src/transition/demo/transition.less
@@ -2,6 +2,17 @@
   width: 100px;
   height: 100px;
   background-color: blue;
+  transition-timing-function: ease;
+}
+
+.k-fade-enter-active,
+.k-fade-leave-active {
+  transition-property: opacity;
+}
+
+.k-fade-enter,
+.k-fade-leave-to {
+  opacity: 0;
 }
 
 .k-custom-enter-active,
