--- a/src/button/demo/button.wxml
+++ b/src/button/demo/button.wxml
@@ -1,24 +1,19 @@
-<k-space style="padding-bottom: 16px" size="md" vertical>
-  <demo-block title="类型">
+<k-flex style="padding-bottom: 16px" gap="md" vertical>
+  <demo-block title="颜色">
+    <k-space wrap>
+      <k-button>Default</k-button>
+      <k-button color="primary">Primary</k-button>
+      <k-button color="success">Success</k-button>
+      <k-button color="warning">Warning</k-button>
+      <k-button color="danger">Dander</k-button>
+    </k-space>
+  </demo-block>
+
+  <demo-block title="变体">
     <k-space>
       <k-button>Default</k-button>
       <k-button color="primary" variant="clear">Clear</k-button>
       <k-button color="success" variant="outline">Outline</k-button>
-    </k-space>
-  </demo-block>
-
-  <demo-block title="图标">
-    <k-space>
-      <k-button color="primary" icon="add">Button</k-button>
-      <k-button color="primary" loading>Loading</k-button>
-    </k-space>
-  </demo-block>
-
-  <demo-block title="状态">
-    <k-space>
-      <k-button disabled>Default</k-button>
-      <k-button color="primary" variant="clear" disabled>Clear</k-button>
-      <k-button color="success" variant="outline" disabled>Outline</k-button>
     </k-space>
   </demo-block>
 
@@ -30,23 +25,43 @@
     </k-space>
   </demo-block>
 
-  <demo-block title="主题">
-    <k-space wrap>
-      <k-button>Default</k-button>
-      <k-button color="primary">Primary</k-button>
-      <k-button color="success">Success</k-button>
-      <k-button color="warning">Warning</k-button>
-      <k-button color="danger">Dander</k-button>
+  <demo-block title="禁用">
+    <k-space>
+      <k-button disabled>Default</k-button>
+      <k-button color="primary" variant="clear" disabled>Clear</k-button>
+      <k-button color="success" variant="outline" disabled>Outline</k-button>
+    </k-space>
+  </demo-block>
+
+  <demo-block title="加载">
+    <k-space>
+      <k-button loading>Default</k-button>
+      <k-button color="primary" variant="clear" loading>Clear</k-button>
+      <k-button color="success" variant="outline" loading>Outline</k-button>
+    </k-space>
+  </demo-block>
+
+  <demo-block title="图标">
+    <k-space>
+      <k-button icon="heart">Default</k-button>
+      <k-button color="primary" variant="clear" icon="heart">Clear</k-button>
+      <k-button color="success" variant="outline" icon="heart">Outline</k-button>
     </k-space>
   </demo-block>
 
   <demo-block title="形状">
     <k-space wrap>
-      <k-button color="danger" shape="round">Success</k-button>
-      <k-button color="warning" shape="round" variant="outline">Success</k-button>
+      <k-button color="primary" shape="round">Primary</k-button>
+      <k-button color="warning" shape="round">Warning</k-button>
       <k-button color="primary" shape="circle" icon="add" />
+      <k-button color="warning" shape="circle" icon="add" />
+    </k-space>
+  </demo-block>
+
+  <demo-block title="展开">
+    <k-space style="display: flex" vertical>
       <k-button color="success" expand="block" size="lg">Primary</k-button>
       <k-button color="primary" expand="full" size="lg">Success</k-button>
     </k-space>
   </demo-block>
-</k-space>
+</k-flex>
