--- a/src/transition/demo/transition.less
+++ b/src/transition/demo/transition.less
@@ -1,7 +1,7 @@
 .block {
   width: 100px;
   height: 100px;
-  background-color: blue;
+  background-color: #006fee;
   transition-timing-function: ease;
 }
 
@@ -15,13 +15,12 @@
   opacity: 0;
 }
 
-.k-custom-enter-active,
-.k-custom-leave-active {
-  transition-property: background-color, transform;
+.k-rotate-enter-active,
+.k-rotate-leave-active {
+  transition-property: transform;
 }
 
-.k-custom-enter,
-.k-custom-leave-to {
-  background-color: red;
-  transform: rotate(-360deg) translate3d(-100%, -100%, 0);
+.k-rotate-enter,
+.k-rotate-leave-to {
+  transform: rotate(-180deg);
 }
