--- a/src/cell/demo/cell.wxml
+++ b/src/cell/demo/cell.wxml
@@ -1,4 +1,4 @@
-<k-space style="padding-bottom: 16px; width: 100%" size="md" vertical>
+<k-flex style="padding-bottom: 16px; width: 100%" gap="md" vertical>
   <demo-block title="基础用法">
     <k-cell title="单元格" value="内容" required />
     <k-cell title="单元格" value="内容" label="描述信息" border="{{ false }}" />
@@ -48,4 +48,4 @@
   <demo-block title="垂直居中">
     <k-cell title="单元格" value="内容" label="描述信息" center border="{{ false }}" />
   </demo-block>
-</k-space>
+</k-flex>
