--- a/src/loading/demo/loading.wxml
+++ b/src/loading/demo/loading.wxml
@@ -1,4 +1,4 @@
-<k-space style="padding-bottom: 16px" size="md" vertical>
+<k-flex style="padding-bottom: 16px" gap="md" vertical>
   <demo-block title="尺寸">
     <k-space>
       <k-loading size="sm" />
@@ -35,4 +35,4 @@
       <k-loading vertical color="primary" label="加载中" />
     </k-space>
   </demo-block>
-</k-space>
+</k-flex>
