--- a/src/space/demo/space.wxml
+++ b/src/space/demo/space.wxml
@@ -1,4 +1,4 @@
-<k-space style="padding-bottom: 16px" size="md" vertical>
+<k-flex style="padding-bottom: 16px" gap="md" vertical>
   <demo-block title="基本用法">
     <k-space>
       <k-button>Default</k-button>
@@ -40,4 +40,4 @@
       <k-button color="danger">Danger</k-button>
     </k-space>
   </demo-block>
-</k-space>
+</k-flex>
