feat: add popup component

--- a/src/common/style/variables.less
+++ b/src/common/style/variables.less
@@ -127,3 +127,10 @@
 
 // Overlay
 @overlay-background-color: var(--overlay-background-color, rgba(0, 0, 0, 0.6));
+
+// Popup
+@popup-border-radius: var(--popup-border-radius, @radius-l);
+@popup-background-color: var(--popup-background-color, @white-color);
+@popup-close-icon-size: var(--popup-close-icon-size, @font-size-m);
+@popup-close-icon-offset: var(--popup-close-icon-offset, 16px);
+@popup-close-icon-color: var(--popup-close-icon-color, @text-secondary-color);
