--- a/example/miniprogram/pages/index/index.wxml
+++ b/example/miniprogram/pages/index/index.wxml
@@ -3,7 +3,7 @@
     <k-cell title="Button 按钮" url="/pages/button/button" arrow clickable />
     <k-cell title="Grid 栅格" url="/pages/col/col" arrow clickable />
     <k-cell title="Icon 图标" url="/pages/icon/icon" arrow clickable />
-    <k-cell title="Space 间距" url="/pages/space/space" arrow clickable border="{{ false }}" />
+    <k-cell title="Space 间距" url="/pages/space/space" arrow clickable />
     <k-cell title="Flex 弹性布局" url="/pages/flex/flex" arrow clickable border="{{ false }}" />
   </k-cell-group>
 
@@ -13,13 +13,8 @@
 
   <k-cell-group title="反馈" variant="card">
     <k-cell title="Loading 加载" url="/pages/loading/loading" arrow clickable />
-    <k-cell
-      title="Overlay 遮罩层"
-      url="/pages/overlay/overlay"
-      arrow
-      clickable
-      border="{{ false }}"
-    />
+    <k-cell title="Overlay 遮罩层" url="/pages/overlay/overlay" arrow clickable />
+    <k-cell title="Popup 弹出层" url="/pages/popup/popup" arrow clickable border="{{ false }}" />
   </k-cell-group>
 
   <k-cell-group title="动画" variant="card">
