--- a/src/common/style/variables.less
+++ b/src/common/style/variables.less
@@ -33,6 +33,7 @@
 @font-size-2xl: var(--font-size-xl, 24px);
 
 @font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Roboto', sans-serif;
+@font-weight-bold: 600;
 
 // Radius
 @radius-xs: var(--radius-xs, 4px);
@@ -134,3 +135,12 @@
 @popup-close-icon-size: var(--popup-close-icon-size, @font-size-m);
 @popup-close-icon-spacer: var(--popup-close-icon-spacer, @spacer-l);
 @popup-close-icon-color: var(--popup-close-icon-color, @text-secondary-color);
+
+// ActionSheet
+@action-sheet-spacer: var(--action-sheet-spacer, @spacer-s);
+@action-sheet-border-radius: var(--action-sheet-border-radius, @radius-l);
+@action-sheet-background-color: var(--action-sheet-background-color, @white-color);
+@action-sheet-header-padding-inline: var(--action-sheet-header-padding-inline, 12px);
+@action-sheet-header-padding-block: var(--action-sheet-header-padding-inline, 12px);
+@action-sheet-title-font-size: var(--action-sheet-title-font-size, @font-size-s);
+@action-sheet-title-color: var(--action-sheet-title-color, @text-secondary-color);
