--- a/src/common/style/variables.less
+++ b/src/common/style/variables.less
@@ -44,20 +44,22 @@
 // Button
 @button-font-weight: var(--button-font-weight, 500);
 @button-border-width: var(--button-border-width, 2px);
-@button-border-radius: var(--button-border-radius, @radius-m);
 @button-disabled-opacity: var(--button-disabled-opacity, 0.5);
 
-@button-small-font-size: var(--button-small-font-size, @font-size-m);
+@button-small-border-radius: var(--button-small-border-radius, @radius-s);
+@button-small-font-size: var(--button-small-font-size, @font-size-s);
 @button-small-height: var(--button-small-height, 32px);
 @button-small-padding-inline: var(--button-small-padding-inline, 12px);
 
-@button-default-font-size: var(--button-default-font-size, @font-size-m);
-@button-default-height: var(--button-default-height, 40px);
+@button-default-border-radius: var(--button-default-border-radius, @radius-m);
 @button-default-padding-inline: var(--button-default-padding-inline, 16px);
+@button-default-height: var(--button-default-height, 40px);
+@button-default-font-size: var(--button-default-font-size, @font-size-m);
 
-@button-large-font-size: var(--button-large-font-size, @font-size-m);
-@button-large-height: var(--button-large-height, 48px);
+@button-large-border-radius: var(--button-large-border-radius, @radius-l);
 @button-large-padding-inline: var(--button-large-padding-inline, 20px);
+@button-large-height: var(--button-large-height, 48px);
+@button-large-font-size: var(--button-large-font-size, @font-size-l);
 
 @button-default-color: var(--button-default-color, @black-color);
 @button-default-background-color: var(--button-default-background-color, @default-color);
