refactor(popup): optimize style variable

--- a/src/common/style/variables.less
+++ b/src/common/style/variables.less
@@ -132,5 +132,5 @@
 @popup-border-radius: var(--popup-border-radius, @radius-l);
 @popup-background-color: var(--popup-background-color, @white-color);
 @popup-close-icon-size: var(--popup-close-icon-size, @font-size-m);
-@popup-close-icon-offset: var(--popup-close-icon-offset, 16px);
+@popup-close-icon-spacer: var(--popup-close-icon-spacer, @spacer-l);
 @popup-close-icon-color: var(--popup-close-icon-color, @text-secondary-color);
