--- a/src/popup/popup.less
+++ b/src/popup/popup.less
@@ -71,8 +71,8 @@
 
   &__close {
     position: absolute;
-    top: @popup-close-icon-offset;
-    right: @popup-close-icon-offset;
+    top: @popup-close-icon-spacer;
+    right: @popup-close-icon-spacer;
     font-size: @popup-close-icon-size;
     color: @popup-close-icon-color;
   }
