refactor: optimize style variable

--- a/src/common/style/variables.less
+++ b/src/common/style/variables.less
@@ -133,11 +133,11 @@
 @popup-border-radius: var(--popup-border-radius, @radius-l);
 @popup-background-color: var(--popup-background-color, @white-color);
 @popup-close-icon-size: var(--popup-close-icon-size, @font-size-m);
-@popup-close-icon-spacer: var(--popup-close-icon-spacer, @spacer-l);
+@popup-close-icon-spacer: var(--popup-close-icon-spacer, 16px);
 @popup-close-icon-color: var(--popup-close-icon-color, @text-secondary-color);
 
 // ActionSheet
-@action-sheet-spacer: var(--action-sheet-spacer, @spacer-s);
+@action-sheet-spacer: var(--action-sheet-spacer, 8px);
 @action-sheet-border-radius: var(--action-sheet-border-radius, @radius-l);
 @action-sheet-background-color: var(--action-sheet-background-color, @white-color);
 @action-sheet-header-padding-inline: var(--action-sheet-header-padding-inline, 12px);
