--- a/src/cell-group/cell-group.less
+++ b/src/cell-group/cell-group.less
@@ -1,4 +1,13 @@
-@import '../common/style/index.less';
+@import '../common/style/variables.less';
+
+@cell-group-card-margin-inline: var(--cell-group-card-margin-inline, 16px);
+@cell-group-card-border-radius: var(--cell-group-card-border-radius, @radius-m);
+
+@cell-group-title-padding-inline: var(--cell-group-title-padding-inline, 16px);
+@cell-group-title-padding-block: var(--cell-group-title-padding-block, 16px);
+@cell-group-title-line-height: var(--cell-group-title-line-height, 16px);
+@cell-group-title-font-size: var(--cell-group-title-font-size, @font-size-s);
+@cell-group-title-color: var(--cell-group-title-color, @text-secondary-color);
 
 @cell-group: ~'k-cell-group';
 
