--- a/src/overlay/overlay.less
+++ b/src/overlay/overlay.less
@@ -1,5 +1,7 @@
 @import '../common/style/variables.less';
 
+@overlay-background-color: var(--overlay-background-color, rgba(0, 0, 0, 0.6));
+
 @overlay: ~'k-overlay';
 
 .@{overlay} {
