--- a/src/cell/cell.less
+++ b/src/cell/cell.less
@@ -1,5 +1,25 @@
-@import '../common/style/index.less';
-@import '../common/style/mixins/hairline.less';
+@import '../common/style/variables.less';
+@import '../common/style/hairline.less';
+
+@cell-padding-inline: var(--cell-padding-inline, 16px);
+@cell-padding-block: var(--cell-padding-block, 12px);
+@cell-large-padding-block: var(--cell-large-padding-block, 16px);
+@cell-border-spacer: var(--cell-border-spacer, 16px);
+
+@cell-font-size: var(--cell-font-size, @font-size-s);
+@cell-large-font-size: var(--cell-large-font-size, @font-size-m);
+@cell-label-font-size: var(--cell-label-font-size, @font-size-xs);
+@cell-large-label-font-size: var(--cell-large-label-font-size, @font-size-s);
+@cell-icon-size: var(--cell-icon-size, 16px);
+@cell-line-height: var(--cell-line-height, 24px);
+
+@cell-color: var(--cell-color, @text-color);
+@cell-label-color: var(--cell-label-color, @text-secondary-color);
+@cell-value-color: var(--cell-value-color, @text-secondary-color);
+@cell-right-icon-color: var(--cell-right-icon-color, @text-secondary-color);
+@cell-background-color: var(--cell-background-color, @background-color);
+@cell-active-background-color: var(--cell-active-background-color, @active-background-color);
+@cell-required-color: var(--cell-required-color, @danger-color);
 
 @cell: ~'k-cell';
 
