--- a/src/popup/popup.less
+++ b/src/popup/popup.less
@@ -1,5 +1,11 @@
 @import '../common/style/variables.less';
 
+@popup-border-radius: var(--popup-border-radius, @radius-l);
+@popup-background-color: var(--popup-background-color, rgba(255, 255, 255, 1));
+@popup-close-icon-size: var(--popup-close-icon-size, @font-size-m);
+@popup-close-icon-spacer: var(--popup-close-icon-spacer, 16px);
+@popup-close-icon-color: var(--popup-close-icon-color, @text-secondary-color);
+
 @popup: ~'k-popup';
 
 .@{popup} {
